# learn_opengl

./: .gitignore  .gitmodules  CMakeLists.txt
shaders/: shader.frag  shader.vert
src/: main.cpp
src/core/: camera.hpp  image.hpp  program.cpp  program.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
src/util/: exit.hpp  file.cpp  file.hpp  log.hpp  opengl_debug.cpp  opengl_debug.hpp  shader.cpp  shader.hpp
src/util/internal/: internal_opengl_debug_callback.cpp  internal_opengl_debug_callback.hpp
